--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "zoom-clone",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -11,12 +12,10 @@
   "dependencies": {
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "peer": "^1.3.1",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  },
-  "description": ""
+  }
 }
